feat(AttendanceBook): 출석부에 checkIn 구현